# tstim

./: README.md  pyproject.toml
examples/: check_depolarizing.ipynb  example.ipynb  test.ipynb  timeit.ipynb
tstim/: __init__.py  tstim.py
